--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -64,12 +64,24 @@
         </div>
 
 
+        <% if current_user.profile.admin? %>
+          <div class="item border-bottom py-3">
+            <div class="row justify-content-between align-items-center">
+              <div class="col-auto">
+                <div class="item-label"><strong>Status</strong></div>
+                <div class="item-data"><%= book_status_badge @book %></div>
+              </div><!--//col-->
+            </div><!--//row-->
+          </div>
+        <% end %>
+
         <div class="row align-items-end mt-2">
           <div class="btn-group col-md-12">
             <%= link_to 'Editar', edit_book_path(@book), class: "btn app-btn-primary" %>
             <%= link_to 'Cancelar', books_path, class: "btn app-btn-secondary" %>
           </div>
         </div>
+
       </div><!--//app-card-body-->						    
     </div><!--//app-card-->
   </div>
